Switching to JPA for all RequestMapping.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 server.error.include-stacktrace=never
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:test_db
+spring.jpa.defer-datasource-initialization=true
